--- a/trial.html
+++ b/trial.html
@@ -6,12 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form  method="post" class="form">
-        <input type="text" name="todo" id="todoItem">
-        <button type="submit" >save</button>
+    <form  method="post" id="form">
+        <input type="text" name="todoItem" id="todoItem">
+        <button type="submit" id="btn">add</button>
     </form>
-
     <div class="display"></div>
-    <script src="script.js"></script>
+    <script src="trial.js"></script>
 </body>
 </html>
