--- a/trial.html
+++ b/trial.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="trial.css">
 </head>
 <body>
     <form  method="post" id="form">
         <input type="text" name="todoItem" id="todoItem">
         <button type="submit" id="btn">add</button>
     </form>
-    <div class="display"></div>
+    <div class="display">
+        <form  method="post" id="resetForm">
+            <input type="text" name="reset" id="reset">
+            <button type="submit">update</button>
+        </form>
+    </div>
     <script src="trial.js"></script>
 </body>
 </html>
